--- a/MainAvionic/MainAvionic.ioc
+++ b/MainAvionic/MainAvionic.ioc
@@ -3,15 +3,55 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+I2C2.IPParameters=Timing
+I2C2.Timing=0x00707CBB
 KeepUserPlacement=false
 Mcu.CPN=STM32F030C8T6TR
 Mcu.Family=STM32F0
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP0=ADC
+Mcu.IP1=I2C1
+Mcu.IP2=I2C2
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F030C8Tx
 Mcu.Package=LQFP48
-Mcu.PinsNb=0
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PB10
+Mcu.Pin13=PB11
+Mcu.Pin14=PB12
+Mcu.Pin15=PB13
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA11
+Mcu.Pin2=PA0
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PB3
+Mcu.Pin24=PB4
+Mcu.Pin25=PB5
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
+Mcu.Pin28=PB8
+Mcu.Pin29=PB9
+Mcu.Pin3=PA1
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030C8Tx
@@ -23,6 +63,94 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+PA0.Mode=SYS_WakeUp0
+PA0.Signal=SYS_WKUP1
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=Optional-ADC
+PA1.Mode=IN1
+PA1.Signal=ADC_IN1
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=BUTON
+PA11.Locked=true
+PA11.Signal=GPIO_Input
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=Optional-EXTI
+PA12.Locked=true
+PA12.Signal=GPXTI12
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=Lora-NSS
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
+PA7.Mode=Full_Duplex_Master
+PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=MPU6050-LED
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=Lora-DIO0
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=Lora-RESET
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.Mode=I2C
+PB10.Signal=I2C2_SCL
+PB11.Mode=I2C
+PB11.Signal=I2C2_SDA
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=First-Seperation
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=Second-Seperation
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=BMP180-LED
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=GPS-LED
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=LORA-LED
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=Optional-IN
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=Optional-OUT
+PB9.Locked=true
+PB9.Signal=GPIO_Output
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -54,11 +182,34 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
-RCC.IPParameters=FamilyName,PLLCLKFreq_Value,PLLMCOFreq_Value,TimSysFreq_Value
-RCC.PLLCLKFreq_Value=8000000
-RCC.PLLMCOFreq_Value=4000000
-RCC.TimSysFreq_Value=8000000
+RCC.HCLKFreq_Value=32000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value
+RCC.MCOFreq_Value=32000000
+RCC.PLLCLKFreq_Value=32000000
+RCC.PLLMCOFreq_Value=16000000
+RCC.PLLMUL=RCC_PLL_MUL8
+RCC.SYSCLKFreq_VALUE=32000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TimSysFreq_Value=32000000
+RCC.USART1Freq_Value=32000000
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
+SPI1.CalculateBaudRate=16.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
 isbadioc=false
