--- a/MainAvionic/MainAvionic.ioc
+++ b/MainAvionic/MainAvionic.ioc
@@ -28,30 +28,27 @@ Mcu.Pin12=PB10
 Mcu.Pin13=PB11
 Mcu.Pin14=PB12
 Mcu.Pin15=PB13
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PA0
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PB3
-Mcu.Pin24=PB4
-Mcu.Pin25=PB5
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=PB9
+Mcu.Pin20=PA14
+Mcu.Pin21=PB4
+Mcu.Pin22=PB5
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=PB8
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_SYS_VS_Systick
 Mcu.Pin3=PA1
-Mcu.Pin30=VP_SYS_VS_Systick
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=31
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030C8Tx
@@ -71,10 +68,6 @@ PA1.Mode=IN1
 PA1.Signal=ADC_IN1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=BUTON
-PA11.Locked=true
-PA11.Signal=GPIO_Input
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=Optional-EXTI
 PA12.Locked=true
@@ -97,10 +90,6 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=MPU6050-LED
-PA8.Locked=true
-PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
@@ -123,16 +112,12 @@ PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=Second-Seperation
 PB13.Locked=true
 PB13.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=BMP180-LED
-PB3.Locked=true
-PB3.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=GPS-LED
+PB4.GPIO_Label=SECSEP-LED
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=LORA-LED
+PB5.GPIO_Label=FIRSTSEP-LED
 PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.Mode=I2C
