--- a/MainAvionic/MainAvionic.ioc
+++ b/MainAvionic/MainAvionic.ioc
@@ -38,26 +38,27 @@ Mcu.Pin18=PA8
 Mcu.Pin19=PA9
 Mcu.Pin2=PA0
 Mcu.Pin20=PA10
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PB4
-Mcu.Pin25=PB5
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=PB9
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13
+Mcu.Pin24=PA14
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PA1
-Mcu.Pin30=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=33
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030C8Tx
@@ -80,6 +81,10 @@ PA1.Mode=IN1
 PA1.Signal=ADC_IN1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=BUZZER
+PA11.Locked=true
+PA11.Signal=GPIO_Output
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=Optional-EXTI
 PA12.Locked=true
@@ -190,7 +195,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_ADC_Init-ADC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_ADC_Init-ADC-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
