--- a/ThirdParty_MainAvionic/ThirdParty_MainAvionic.ioc
+++ b/ThirdParty_MainAvionic/ThirdParty_MainAvionic.ioc
@@ -4,7 +4,8 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.BinarySemaphores01=BinSemSep,Dynamic,NULL
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,configUSE_NEWLIB_REENTRANT
+FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,configUSE_NEWLIB_REENTRANT,Mutexes01
+FREERTOS.Mutexes01=SimpleMutex,Dynamic,NULL
 FREERTOS.Tasks01=defaultTask,-3,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;SeperationTask,1,128,StartSeperationTask,Default,NULL,Dynamic,NULL,NULL;SepSensorTask,0,128,StartSepSensorTask,Default,NULL,Dynamic,NULL,NULL;GPSTask,-1,128,StartGPSTask,Default,NULL,Dynamic,NULL,NULL;CommTask,-2,128,StartCommTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
